--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="button_right btn">
+        <img src="icons/previous.png" alt="" />
+      </div>
+      <div class="image-container"></div>
+      <div class="button_left btn"><img src="icons/next.png" alt="" /></div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
