--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="button_right btn">
+      <div class="button_left btn">
         <img src="icons/previous.png" alt="" />
       </div>
       <div class="image-container"></div>
-      <div class="button_left btn"><img src="icons/next.png" alt="" /></div>
+      <div class="button_right btn"><img src="icons/next.png" alt="" /></div>
     </div>
     <script src="app.js"></script>
   </body>
